k8s/scaffold.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: bicycle-whether-api
  name: bicycle-whether-api
spec:
  ports:
    - name: exposed-port
      port: 80
      targetPort: 8080
  selector:
    name: bicycle-whether-api
